minor style fix on mobile devices

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,7 +20,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
     height: 300px;
 }
 
